# charm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
charm/: CMakeLists.txt  ch3db.h  charm.h  charm_utils.cpp  misc.h
charm/app/: AbstractGameLoop.h  AppAdapter.cpp  AppAdapter.h  AppOptions.h  Application.cpp  Application.h  IGameLoop.cpp  IGameLoop.h  IRootWidget.cpp  IRootWidget.h  Registry.h  Window.cpp  Window.h  XAppAdapter.h  XAppOptions.h  XApplication.cpp  XApplication.h  XRegistry.h  XWindow.cpp  XWindow.h
charm/camera/: Camera.cpp  Camera.h  XCamera.cpp  XCamera.h
charm/ch3db/: ch3db.cpp  ch3db.h
charm/ecs/: Component.cpp  Component.h  Entity.cpp  Entity.h  Renderer.cpp  Renderer.h  XComponent.cpp  XComponent.h  XEntity.cpp  XEntity.h
charm/ecs/components/: MeshRendererComponent.cpp  MeshRendererComponent.h  TransformComponent.cpp  TransformComponent.h  XMeshRendererComponent.cpp  XMeshRendererComponent.h  XTransformComponent.cpp  XTransformComponent.h
charm/events/: InputEvent.h  InputEventChar.cpp  InputEventChar.h  InputEventKey.cpp  InputEventKey.h  InputEventMouseButton.cpp  InputEventMouseButton.h  InputEventMouseMotion.cpp  InputEventMouseMotion.h  InputEventScroll.cpp  InputEventScroll.h
charm/gl/: Buffer.cpp  Buffer.h  Context.cpp  Context.h  Framebuffer.cpp  Framebuffer.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  defines.h
charm/graphics/: Renderer.cpp  Renderer.h  XRenderer.cpp  XRenderer.h
charm/graphics/environment/: DirectionalLight.h  Environment.cpp  Environment.h
charm/graphics/font/: Font.cpp  Font.h  FontMetadata.cpp
charm/graphics/framebuffer/: Framebuffer.cpp  Framebuffer.h  FramebufferBuilder.cpp  FramebufferBuilder.h
charm/graphics/geometry/: BoxGeometry.cpp  BoxGeometry.h  Geometry.cpp  Geometry.h  XBoxGeometry.cpp  XBoxGeometry.h  XGeometry.cpp  XGeometry.h
charm/graphics/material/: Material.cpp  Material.h  XMaterial.cpp  XMaterial.h
charm/graphics/model/: Model.cpp  Model.h
charm/graphics/render_target/: RenderTarget.cpp  RenderTarget.h
charm/graphics/shaders/: Program.cpp  Program.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderRegistry.cpp  ShaderRegistry.h  XProgram.cpp  XProgram.h  XShader.cpp  XShader.h  XShaderRegistry.cpp  XShaderRegistry.h
charm/graphics/skybox/: Skybox.cpp  Skybox.h
charm/graphics/textures/: ImageData.cpp  ImageData.h  Texture2D.cpp  Texture2D.h  Texture2DBuilder.cpp  Texture2DBuilder.h  XImageData.cpp  XImageData.h  XTexture2D.cpp  XTexture2D.h  XTexture2DBuilder.cpp  XTexture2DBuilder.h
charm/io/: BinaryIO.cpp  BinaryIO.h  FileIO.cpp  FileIO.h  FontIO.cpp  FontIO.h  Input.cpp  Input.h  XFileIO.cpp  XFileIO.h  XInput.cpp  XInput.h
charm/io/ppm/: PPMReader.cpp  PPMReader.h  XPPMReader.cpp  XPPMReader.h
charm/math/: Mat4.cpp  Mat4.h  Matrix4f.cpp  Matrix4f.h  Quat.cpp  Quat.h  Vec3.cpp  Vec3.h  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h  XMatrix4f.cpp  XMatrix4f.h  XVector4f.cpp  XVector4f.h
charm/memory/: observer_ptr.h
charm/misc/: Rect.h  TextureBuilder.cpp  TextureBuilder.h  misc.cpp  misc.h
charm/misc/builder/: FramebufferBuilder.cpp  TextureBuilder.cpp
charm/objects/: AbstractGameObject.h  GameObject.h  IGameObject.cpp  IGameObject.h
charm/ui/: Context.cpp  Context.h  Document.cpp  Document.h  FontMetadata.cpp  FontMetadata.h  IElement.h  ImmediateUI.cpp  ImmediateUI.h  Panel.cpp  Panel.h  Style.h  UIDocument.cpp  UIDocument.h  UIPanel.cpp  UIPanel.h  imui.cpp  imui.h
charm/ui/elements/: Element.cpp  Element.h  UIElement.cpp  UIElement.h
charm/ui/elements/button/: Button.cpp  Button.h
charm/ui/elements/canvas/: Canvas.cpp  Canvas.h
charm/ui/elements/checkbox/: Checkbox.cpp  Checkbox.h
charm/ui/elements/hboxcontainer/: HBoxContainer.cpp  HBoxContainer.h
charm/ui/elements/input/: TextInput.cpp  TextInput.h
charm/ui/elements/label/: Label.cpp  Label.h  UILabel.cpp  UILabel.h
charm/ui/elements/paddedcontainer/: PaddedContainer.cpp  PaddedContainer.h
charm/ui/elements/paragraph/: Paragraph.cpp  Paragraph.h
charm/ui/elements/scrollarea/: ScrollArea.cpp  ScrollArea.h
charm/ui/elements/vboxcontainer/: VBoxContainer.cpp  VBoxContainer.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_mat4.cpp  test_matrix4f.cpp  testing.h
tools/: CMakeLists.txt
(+59 files in other folders)
